--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.2"
+coilCompose = "2.4.0"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -14,6 +15,8 @@ dexter = "5.0.0"
 firebaseBom = "33.1.2"
 firebaseCoreVersion = "21.1.1"
 firebaseFirestoreKtx = "25.0.0"
+firebaseAuthKtx = "23.0.0"
+firebaseAnalyticsKtx = "22.1.2"
 firebaseUiFirestore = "8.0.0"
 foundation = "1.4.3"
 googleServices = "4.4.2"
@@ -36,12 +39,16 @@ lottiedialog = "1.0.0"
 materialIconsExtended = "1.6.8"
 multidex = "2.0.1"
 navigationSafeArgsGradlePlugin = "2.7.7"
+openaiClient = "3.3.0"
 playServicesAuth = "21.2.0"
+playServicesLocationVersion = "21.0.1"
 runtimeLivedata = "1.6.8"
 playServicesLocation = "21.3.0"
+firebaseStorageKtx = "21.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -71,8 +78,8 @@ androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:na
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationSafeArgsGradlePlugin" }
 core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "core" }
 dexter = { module = "com.karumi:dexter", version.ref = "dexter" }
-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
+firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx", version.ref = "firebaseAuthKtx"}
+firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx", version.ref = "firebaseAnalyticsKtx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 firebase-ui-firestore = { module = "com.firebaseui:firebase-ui-firestore", version.ref = "firebaseUiFirestore" }
@@ -91,8 +98,11 @@ lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "
 lottiedialog = { module = "io.github.amrdeveloper:lottiedialog", version.ref = "lottiedialog" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+openai-client = { module = "com.aallam.openai:openai-client", version.ref = "openaiClient" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+play-services-location-v2101 = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocationVersion" }
+firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
