--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
 agp = "8.5.2"
+biometric = "1.4.0-alpha02"
 coilCompose = "2.4.0"
-kotlin = "1.9.21"
+kotlin = "1.9.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -45,9 +46,12 @@ playServicesLocationVersion = "21.0.1"
 runtimeLivedata = "1.6.8"
 playServicesLocation = "21.3.0"
 firebaseStorageKtx = "21.0.1"
+biometricKtx = "1.1.0"
 
 [libraries]
+androidx-biometric = { module = "androidx.biometric:biometric" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -103,6 +107,7 @@ play-services-auth = { module = "com.google.android.gms:play-services-auth", ver
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 play-services-location-v2101 = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocationVersion" }
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
+androidx-biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "biometricKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
